# getIntoGameDev

./: .gitignore  readme.md
Assets/models/: cube.gltf  rocket.mtl
Bounding Volume Hierarchies/sparse/: config.h
Bounding Volume Hierarchies/start/: config.h
Data Oriented Design/1 Profiling Python Code/: naive_raytracer.py  optimised_raytracer.py  profiler.py  readme.md  unreadable_but_faster.py
Data Oriented Design/2 Proto-Data Oriented Design/: code.py  readme.md
Data Oriented Design/old code/5 managed arrays/: CMakeLists.txt
Data Oriented Design/old code/5 managed arrays/src/components/: animation_component.h  component_set.h  physics_component.h  render_component.h
Data Oriented Design/old code/5 managed arrays/src/factories/: factory.h  texture_factory.cpp  texture_factory.h
Data Oriented Design/old code/5 managed arrays/src/shaders/: vertex.txt
Data Oriented Design/old code/5 managed arrays/src/systems/: animation_system.h  camera_system.cpp  camera_system.h  motion_system.h  render_system.cpp  render_system.h
GUI programming in Python/editor/: editor.py
GUI programming in Python/simple_map_editor/: controller.py  view.py
Game Engine Topics/legacy pyopengl/: stage1.py  stage6.py  stage8.py
Game Engine Topics/obj_loader/: Project.sln  Project.vcxproj.filters
Guides/: lunarg-sdk-setup.md  vim-setup.md
Javascript for Beginners/01 - Data Types/: index.html
Javascript for Beginners/02 - Basic Programming/: index.html
Javascript for Beginners/03 - Functions/: index.html
Javascript for Beginners/04 - Arrays and objects/: index.html
Javascript for Beginners/05 - Functional Programming/: index.html
Maze Board/: assets.py  config.py  gameObjects.py  main.py
Projects/: readme.md
Realtime Raytracing/cpp/02 getting data in/start/: CMakeLists.txt
Realtime Raytracing/cpp/02 getting data in/start/src/components/: camera_component.h  component_set.h
Realtime Raytracing/cpp/02 getting data in/start/src/factories/: texture_factory.cpp
Realtime Raytracing/cpp/02 getting data in/start/src/systems/: render_system.h
Realtime Raytracing/cpp/02 getting data in/start/src/view/: shader.h
Rust/7 - loading images/finished/: Cargo.toml
legacy pyopengl/: stage2.py  stage3.py  stage4.py  stage5.py  stage7.py  stage8.py
obj_loader/: Project.vcxproj
pygame/: stage2.py  stage4.py  stage6.py  stage7.py
pyvulkan/: pyvulkan_stage10.py  pyvulkan_stage11.py  pyvulkan_stage12.py  pyvulkan_stage13.py  pyvulkan_stage14.py  pyvulkan_stage15.py  pyvulkan_stage16.py  pyvulkan_stage17.py  pyvulkan_stage7.py  pyvulkan_stage8.py  pyvulkan_stage9.py
vulkan/: ~$Script.docx  ~WRL0005.tmp
vulkan/07 - swapchain/finished/: CMakeLists.txt
vulkan/07 - swapchain/finished/src/renderer/: device.cpp  frame.cpp
wgpu/07-buffer-suballocation/: Cargo.toml
wgpu/07-buffer-suballocation/src/: main.rs
wgpu/07-buffer-suballocation/src/renderer_backend/: bind_group.rs  bind_group_layout.rs  mesh_builder.rs  pipeline.rs
wgpu/13 - animated gltf models/: Cargo.toml
wgpu/13 - animated gltf models/models/: modern_girl.gltf
wgpu/13 - animated gltf models/src/: main.rs
wgpu/13 - animated gltf models/src/model/: animation.rs  character.rs  mod.rs  transform_component.rs  world.rs
wgpu/13 - animated gltf models/src/renderer/: renderer.rs
wgpu/13 - animated gltf models/src/utility/: math.rs
wgpu/15-cubemaps/: Cargo.toml
wgpu/15-cubemaps/src/: main.rs
wgpu/15-cubemaps/src/model/: animation.rs  character.rs
wgpu/15-cubemaps/src/renderer/: mod.rs  renderer.rs
wgpu/15-cubemaps/src/renderer/backend/: bind_group_layout.rs  definitions.rs  mesh_builder.rs  pipeline.rs  texture.rs
wgpu/15-cubemaps/src/shaders/: colored_model_shader.wgsl  skeletal_model_shader.wgsl  sky_shader.wgsl  textured_model_shader.wgsl
wgpu/15-cubemaps/src/utility/: file.rs  math.rs
wgpu/models/: gun.mtl
(+2814 files in other folders)
