[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.59.0"
wgpu = "23.0.1"
pollster = "0.4.0"
glm = "*"
[dependencies.image]
version = "0.25.5"
features = ["png", "jpeg"]