[package]
name = "project"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.59.0"
wgpu = "25.0.2"
pollster = "0.4.0"
glm = "*"
serde_json = "1.0"
[dependencies.image]
version = "0.25.6"
features = ["png", "jpeg"]